fix some css issue align items to maring 0 auto

--- a/index.css
+++ b/index.css
@@ -36,14 +36,13 @@ h2 {
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 100px;
+    margin: 50px auto;
+    max-width: 500px;
 }
 .user-input {
     padding: 20px 22px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column;  
 }
 
 h1 {
